work on jreleaser